--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "format_version": 2,
 
   "header": {
-    "name": "Chat ranks for hyde by grant",
+    "name": "Chat ranks for hyde by grant with antispam",
     "description": "Chat ranks with bot controllability",
     "uuid": "0225129e-82b5-4f84-b2c8-5c76314aee06",
     "version": [2, 0, 0],
